--- a/rrss_regresion.ipynb
+++ b/rrss_regresion.ipynb
@@ -126,7 +126,7 @@
    ],
    "source": [
     "# carga de datos y seleccion de variables\n",
-    "dataset = pd.read_csv('/home/dgomez/comp/machine_learning/proyectos/rrss/rrss_new_filtrado.csv')\n",
+    "dataset = pd.read_csv('http://www.danielgomez.cl/tmp/rrss_new_filtrado.csv')\n",
     "print \"count: \" + str(dataset['tickets'].count())\n",
     "print \"mean: \" + str(dataset['tickets'].mean())\n",
     "print \"std: \" + str(dataset['tickets'].std())\n",
