--- a/rrss_regression.ipynb
+++ b/rrss_regression.ipynb
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 217,
    "metadata": {},
    "outputs": [
     {
@@ -1241,7 +1241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 224,
    "metadata": {},
    "outputs": [
     {
@@ -1253,10 +1253,10 @@
       " False False False False False False False False False False False False\n",
       " False False False False False False False False False False False False\n",
       " False False False False False False False False False False False False\n",
-      "  True  True  True  True  True  True False  True False  True False  True\n",
-      " False  True]\n",
-      "R2: 0.01\n",
-      "RMSE: 21.84\n"
+      "  True  True  True  True  True  True False  True False False False  True\n",
+      "  True  True]\n",
+      "R2: 0.09\n",
+      "RMSE: 20.63\n"
      ]
     }
    ],
@@ -1271,6 +1271,124 @@
     "y_pred = rfe.predict(X_test)\n",
     "print \"R2: \" + str(round(r2_score(y_test, y_pred), 2))\n",
     "print \"RMSE: \" + str(round(np.sqrt(mean_squared_error(y_pred, y_test)), 2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 225,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# calculo de errores y aciertos\n",
+    "sum = 0; aciertos_positivo = 0; aciertos_negativo = 0\n",
+    "errores_positivo = 0; errores_negativo = 0\n",
+    "sum_positivo = 0; sum_negativo = 0\n",
+    "sum_predict_positivo = 0; sum_predict_negativo = 0\n",
+    "total_test = len(X_test)\n",
+    "y_list2 = list(y_test)\n",
+    "for k in range(0, len(y_pred)):\n",
+    "    sum += abs(y_pred[k] - y_list[k])\n",
+    "    if y_list2[k] >= threshold and y_pred[k] >= threshold:\n",
+    "        aciertos_positivo += 1\n",
+    "    if y_list2[k] >= threshold and y_pred[k] < threshold:\n",
+    "        errores_positivo += 1\n",
+    "    if y_list2[k] < threshold and y_pred[k] < threshold:\n",
+    "        aciertos_negativo += 1\n",
+    "    if y_list2[k] < threshold and y_pred[k] >= threshold:\n",
+    "        errores_negativo += 1\n",
+    "    if y_list2[k] >= threshold:\n",
+    "        sum_positivo += 1\n",
+    "    else:\n",
+    "        sum_negativo += 1\n",
+    "    if y_pred[k] >= threshold:\n",
+    "        sum_predict_positivo += 1\n",
+    "    else:\n",
+    "        sum_predict_negativo += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 226,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "R2: 0.09\n",
+      "RMSE: 20.63\n",
+      "SCORE: 52 / 72 = 0.722\n",
+      "PRECISION: 0.87\n",
+      "RECALL: 0.741\n",
+      "correlacion: 0.35\n",
+      "confusion-matrix:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>positivo</th>\n",
+       "      <th>negativo</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>positivo</th>\n",
+       "      <td>40</td>\n",
+       "      <td>14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>negativo</th>\n",
+       "      <td>6</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          positivo  negativo\n",
+       "positivo        40        14\n",
+       "negativo         6        12"
+      ]
+     },
+     "execution_count": 226,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# estadisticas del modelo\n",
+    "print\n",
+    "print \"R2: \" + str(round(r2_score(y_test, y_pred), 2))\n",
+    "print \"RMSE: \" + str(round(np.sqrt(mean_squared_error(y_pred, y_test)), 2))\n",
+    "print \"SCORE: \" + str(aciertos_positivo + aciertos_negativo) + \" / \" + str(total_test) + \" = \" + str(round(1.0 * (aciertos_positivo + aciertos_negativo)/total_test, 3))\n",
+    "print \"PRECISION: \" + str(round(1.0 * aciertos_positivo / sum_predict_positivo, 3))\n",
+    "print \"RECALL: \" + str(round(1.0 * aciertos_positivo / sum_positivo, 3))\n",
+    "df = pd.DataFrame({'real': y_test, 'prediction': y_pred})\n",
+    "print \"correlacion: \" + str(round(df.corr()['real'][0], 2))\n",
+    "print \"confusion-matrix:\"\n",
+    "conf = pd.DataFrame([[aciertos_positivo, errores_positivo], [errores_negativo, aciertos_negativo]], columns=['positivo', 'negativo'])\n",
+    "conf.rename(index={0:'positivo', 1:'negativo'})"
    ]
   },
   {
