nueva version de la regresion.

--- a/rrss_regression.ipynb
+++ b/rrss_regression.ipynb
@@ -93,7 +93,8 @@
     "from sklearn.neural_network import MLPRegressor\n",
     "warnings.filterwarnings('ignore')\n",
     "\n",
-    "threshold = 77"
+    "threshold = 77\n",
+    "algorithm = 'randomforest'"
    ]
   },
   {
@@ -872,79 +873,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2205,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "R2: -0.16, RMSE: 24.85, SCORE: 24 / 42 = 0.571\n",
-      "R2: -0.01, RMSE: 19.71, SCORE: 26 / 41 = 0.634\n",
-      "R2: 0.14, RMSE: 27.14, SCORE: 29 / 41 = 0.707\n",
-      "R2: 0.19, RMSE: 21.2, SCORE: 32 / 41 = 0.78\n",
-      "R2: 0.24, RMSE: 19.64, SCORE: 28 / 41 = 0.683\n",
-      "R2: -0.16, RMSE: 23.69, SCORE: 23 / 41 = 0.561\n",
-      "R2: 0.18, RMSE: 20.91, SCORE: 28 / 41 = 0.683\n",
-      "R2: 0.12, RMSE: 23.2, SCORE: 28 / 41 = 0.683\n",
-      "R2: -0.04, RMSE: 24.67, SCORE: 24 / 41 = 0.585\n",
-      "R2: 0.12, RMSE: 23.83, SCORE: 27 / 41 = 0.659\n",
-      "\n",
-      "R2s:  0.06130847884730027\n",
-      "RMSEs:  22.883110867478376\n",
-      "scores:  0.6425\n",
-      "\n"
+      "R2: 0.12, RMSE: 23.15, SCORE: 28 / 41 = 0.683\n",
+      "R2: -0.04, RMSE: 29.31, SCORE: 27 / 41 = 0.659\n",
+      "R2: 0.08, RMSE: 22.38, SCORE: 28 / 41 = 0.683\n",
+      "R2: 0.22, RMSE: 24.75, SCORE: 28 / 41 = 0.683\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>positivo</th>\n",
-       "      <th>negativo</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>positivo</th>\n",
-       "      <td>186</td>\n",
-       "      <td>70</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>negativo</th>\n",
-       "      <td>72</td>\n",
-       "      <td>83</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "          positivo  negativo\n",
-       "positivo       186        70\n",
-       "negativo        72        83"
-      ]
-     },
-     "execution_count": 2205,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1437,9 +1377,9 @@
     "models['randomforest'] = RandomForestRegressor(n_estimators=1600, criterion='mse', max_depth=None, min_samples_split=2, min_samples_leaf=2, max_features=4, oob_score=True, n_jobs=4)\n",
     "models['MLPRegressor'] = MLPRegressor(activation='tanh', solver='sgd', learning_rate='adaptive', max_iter=900)\n",
     "                 \n",
-    "for algorithm in models:\n",
-    "    print algorithm + ':'\n",
-    "    model = models[algorithm]\n",
+    "for alg in models:\n",
+    "    print alg + ':'\n",
+    "    model = models[alg]\n",
     "    model.fit(X_train, y_train)\n",
     "    predictions = model.predict(X_test)\n",
     "\n",
