--- a/rrss_consolidado.ipynb
+++ b/rrss_consolidado.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +156,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -487,7 +487,7 @@
        "9          0.184         0.827           0.488         0.155       97  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -498,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -776,7 +776,7 @@
        "max           14.12   100.00  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -948,7 +948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -965,7 +965,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -973,8 +973,8 @@
      "output_type": "stream",
      "text": [
       "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23]\n",
-      "[False False False False False False False  True  True  True False False\n",
-      "  True False  True  True  True False  True False  True False False  True]\n"
+      "[False False False False False False False  True  True  True  True  True\n",
+      "  True False  True False  True False False False  True False False  True]\n"
      ]
     }
    ],
@@ -993,25 +993,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[479.34, 524.79, 468.57, 461.92, 443.61] = 475.65\n",
-      "[402.11, 503.83, 402.68, 500.3, 444.98] = 450.78\n",
-      "[364.37, 457.34, 434.42, 518.62, 470.9] = 449.13\n",
-      "[430.2, 500.99, 508.28, 377.19, 460.25] = 455.38\n",
-      "[452.78, 435.23, 376.24, 468.84, 519.29] = 450.48\n",
-      "[505.92, 437.9, 450.12, 417.04, 407.49] = 443.69\n",
-      "[437.84, 471.78, 421.12, 450.74, 399.69] = 436.23\n",
-      "[530.93, 393.2, 434.19, 419.15, 449.31] = 445.36\n",
-      "[459.8, 401.85, 496.03, 503.75, 388.68] = 450.02\n",
-      "[483.34, 565.5, 422.47, 381.15, 420.76] = 454.64\n",
+      "[19.48, 22.18, 23.13, 21.48, 20.39] = 21.33\n",
+      "[22.0, 20.89, 23.06, 21.13, 20.82] = 21.58\n",
+      "[22.52, 19.96, 21.27, 21.98, 21.68] = 21.48\n",
+      "[21.47, 22.17, 20.88, 21.41, 18.97] = 20.98\n",
+      "[21.01, 22.2, 20.17, 21.95, 20.59] = 21.18\n",
+      "[22.35, 20.52, 20.94, 21.3, 23.85] = 21.79\n",
+      "[21.52, 21.11, 21.1, 20.45, 22.53] = 21.34\n",
+      "[20.78, 22.8, 21.57, 20.43, 20.9] = 21.3\n",
+      "[19.99, 20.77, 20.46, 20.37, 21.38] = 20.59\n",
+      "[20.28, 21.13, 21.05, 20.56, 22.18] = 21.04\n",
       "\n",
-      "MSE mean: 451.14, std: 9.74\n"
+      "RMSE mean: 21.26, std: 0.32\n"
      ]
     }
    ],
@@ -1028,10 +1028,10 @@
     "        y_train, y_test = y[train], y[test]\n",
     "        model.fit(X_train,y_train)\n",
     "        y_pred1 = model.predict(X_test)\n",
-    "        resultados.append(mean_squared_error(y_test,y_pred1).round(2))\n",
+    "        resultados.append(np.sqrt(mean_squared_error(y_test,y_pred1)).round(2))\n",
     "    print str(resultados) + \" = \" + str(np.mean(resultados).round(2))\n",
     "    exp.append(np.mean(resultados))\n",
-    "print \"\\nMSE mean: \" + str(np.mean(exp).round(2)) + \", std: \" + str(np.std(exp).round(2))"
+    "print \"\\nRMSE mean: \" + str(np.mean(exp).round(2)) + \", std: \" + str(np.std(exp).round(2))"
    ]
   },
   {
@@ -1529,9 +1529,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 2.7",
    "language": "python",
-   "name": "python2"
+   "name": "py27"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1543,7 +1543,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "version": "2.7.14"
   }
  },
  "nbformat": 4,
